--- a/main.css
+++ b/main.css
@@ -49,6 +49,11 @@ footer{
         width: 95%;
     }
 }
+@media only screen and (min-width: 576px) and (max-width: 992px){
+    .imagens{
+        column-count: 2;
+    }
+}
 @media only screen and (min-width: 992px){
     body{
         width: 60%;
@@ -71,4 +76,49 @@ input:-webkit-autofill:hover,
 input:-webkit-autofill:focus, 
 input:-webkit-autofill:active  {
     -webkit-box-shadow: 0 0 0 30px white inset !important;
+}
+img:hover{
+    cursor: pointer;
+}
+
+#myModal{
+    flex-direction: column;
+    align-items: flex-end;
+}
+
+#myModal img:hover{
+    cursor: default;
+}
+.modal{
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 1050;
+    display: none;
+    overflow: hidden;
+    outline: 0;
+}
+.modal-content{
+    background-color: transparent;
+    border: 0;
+    max-height: 95vh;
+    max-width: 100%;
+    width: auto;
+    margin: auto;
+    border-radius: 0;
+}
+.fechar{
+    height: 5vh;
+    float: right;
+    margin-right: .4em;
+    font-size: 2em;
+    color: white;
+    box-shadow: 0 0 0 9999px rgba(0,0,0,.85);
+    background-color: rgba(0,0,0,.85);
+}
+.fechar:hover{
+    cursor: pointer !important;
+    color: red;
 }
