--- a/main.css
+++ b/main.css
@@ -2,11 +2,9 @@ html{
     background-color: white;
 }
 body{
-    padding: 1em;
     width: 80%;
     margin: 0 auto;
     background-color: rgba(255, 255, 255, 0.8); 
-    min-height: calc(100vh - 2em);
 }
 h1{
     text-align: center;
@@ -22,11 +20,11 @@ h6{
     margin: 0;
     padding: 1em;
 }
+#wrapper{
+    min-height: calc(100vh - 105px);
+}
 footer{
-    position: fixed;
-    bottom: 0;
-    left: 50%;
-    transform: translateX(-50%);
+    height: 55px;
     text-align: center;
     width: 100%;
     background-color: rgba(255, 255, 255, 1); 
@@ -77,7 +75,7 @@ input:-webkit-autofill:focus,
 input:-webkit-autofill:active  {
     -webkit-box-shadow: 0 0 0 30px white inset !important;
 }
-img:hover{
+.imagens img:hover{
     cursor: pointer;
 }
 
@@ -121,4 +119,13 @@ img:hover{
 .fechar:hover{
     cursor: pointer !important;
     color: red;
+}
+#loading{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+#loading img{
+    height: 200px;
+    width: 200px;
 }
